--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES6",                  // cho phép biên dịch code Typescript sang kiểu ES6
     "module": "commonjs",             // CommonJS là tiêu chuẩn được sử dụng trong Node.js để làm việc với các module
     "removeComments": true,           // xóa comments khi biên dịch sang file js
-    "esModuleInterop": true           // Dùng được từ khóa import thay cho require
+    "esModuleInterop": true,           // Dùng được từ khóa import thay cho require
+     "outDir": "dist",
   }
 }
